# drone_pi

./: .gitignore  setup_raspberry_pi.md  setup_workspace.sh  test_motors.sh
.cache/clangd/index/: arm_drone.hpp.B1594F103CBFC276.idx  bt_executor.cpp.47B04B67F3948176.idx  motor_test.hpp.B4D94A6671C6DB50.idx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_behavior_tree/lib/drone_behavior_tree/: bt_executor
install/drone_behavior_tree/share/ament_index/resource_index/package_run_dependencies/: drone_behavior_tree
install/drone_behavior_tree/share/ament_index/resource_index/parent_prefix_path/: drone_behavior_tree
install/drone_behavior_tree/share/drone_behavior_tree/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/drone_behavior_tree/share/drone_behavior_tree/cmake/: drone_behavior_treeConfig.cmake
log/: latest_build
src/drone_behavior_tree/: CMakeLists.txt  package.xml
src/drone_behavior_tree/include/drone_behavior_tree/nodes/: arm_drone.hpp  motor_test.hpp
src/drone_behavior_tree/launch/: motor_test.launch.py
src/drone_behavior_tree/src/: bt_executor.cpp
src/drone_behavior_tree/trees/: motor_test_tree.xml
src/drone_controller/: package.xml  setup.py
src/drone_controller/drone_controller/: arm_and_spin_node.py
src/drone_tests/: CMakeLists.txt  package.xml
src/drone_tests/launch/: motor_test.launch.py
src/drone_tests/trees/: motor_test_tree.xml
