cmake_minimum_required(VERSION 3.8)
project(drone_behavior_tree)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(mavros_msgs REQUIRED)
find_package(behaviortree_cpp REQUIRED)

add_executable(bt_executor src/bt_executor.cpp)
target_include_directories(bt_executor PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_compile_features(bt_executor PUBLIC c_std_99 cxx_std_17)
ament_target_dependencies(bt_executor
  rclcpp
  geometry_msgs
  nav_msgs
  mavros_msgs
  behaviortree_cpp
)

install(TARGETS
  bt_executor
  DESTINATION lib/${PROJECT_NAME})

install(
  DIRECTORY trees launch
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
